--- a/sass/Pages/Menu.scss
+++ b/sass/Pages/Menu.scss
@@ -28,6 +28,7 @@ nav {
         }
     &--image {
      width:100%;
+     height:330px;
      z-index: 1;
      object-fit: cover;
      overflow: hidden;
@@ -38,6 +39,7 @@ nav {
     display:flex;
     align-items:center ;
     margin: 15px 0 20px 10px;
+    font-size: 56px;
 }
 
 .course {
@@ -45,6 +47,8 @@ nav {
             color: $darkcolor;
             margin-bottom:4px;
             margin-top:40px;
+            margin-left:5px;
+            font-size:20px;
         }
     }
 .card {
@@ -59,19 +63,30 @@ nav {
     align-items: flex-end;
          &--text {
             flex-direction: column;
+            flex:1;
+            white-space: nowrap;
+            overflow:hidden;
+            text-overflow: ellipsis;
         }
         &--title {
             font-weight:600;
             font-size:20px;
             margin:4px;
+            white-space: nowrap;
+            overflow:hidden;
+            text-overflow: ellipsis;
         }
         &--details {
             margin:4px;
+            white-space: nowrap;
+            overflow:hidden;
+            text-overflow: ellipsis;
         }
         &--price {
            font-weight: 600;
            margin-bottom: 5px;
-           margin-right:-60px;
+           margin-right:-80px;
+           padding-right:40px;
            transform: translateX(0);
            transition:transform 0.7s ease;
         }
@@ -102,7 +117,7 @@ nav {
         justify-content: center;     
         height:80px;
         width:60px;
-       margin-bottom:-10px;
+        margin-bottom:-10px;
         transform-origin: right;
         transform:scaleX(0);
         transition: transform 0.5s ease;
@@ -118,6 +133,7 @@ nav {
     transform: translateX(4000px);
     animation: greenline-entrance 0.6s 1.2s  both;
     margin-bottom:20px;
+    margin-left:5px;
 }
 
 
@@ -170,4 +186,9 @@ nav {
   .card9 {
     @include cardapparition;
     animation-delay:1.8s
+  }
+
+  .card10 {
+    @include cardapparition;
+    animation-delay:2s
   }
