--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,6 +1,9 @@
+/* INDEX */
+
 /* GENERAL */
-body {
-    max-width: 1440px;
+  .centre {
+    max-width:1440px;
+    margin:0 auto;
   }
 
   .cols {
@@ -61,24 +64,22 @@ body {
     font-size: 130%;
     color: #353535;
   }
+
+  .course {
+    display:flex;
+    justify-content: space-between;
+    width:100%;
+  }
   
-  .menu {
-    background-color: #f6f6f6;
-    display: flex;
-    border-radius: 30px 30px 0 0;
-    margin-top: -20%;
-    position: relative;
-    width: 100%;
-    z-index: 2;
+  .course--category {
+    width:30%;
   }
-  .menu h1 {
-    font-family: shrikhand;
-    font-weight: 200;
-    text-align: center;
-  }
-  .menu--image {
-    width: 100%;
-    z-index: 1;
+
+  .commandbutton {
+    width:30%;
+    text-align:center;
+    margin-left:35%;
+
   }
   
   /*# sourceMappingURL=style.css.map */
