--- a/css/style.css
+++ b/css/style.css
@@ -235,11 +235,77 @@ nav {
     opacity: 1;
   }
 }
+.loader-container {
+  position: fixed;
+  background-color: #f6f6f6;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  animation: disappear 4s ease forwards;
+}
+
+.loader {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  width: 40px;
+  height: 98px;
+  display: inline-block;
+  position: relative;
+  border: 2px solid #9356DC;
+  box-sizing: border-box;
+  color: #ff79da;
+  background-image: linear-gradient(to bottom right, #ff79da, #9356DC);
+  border-radius: 20px 20px 4px 4px;
+  background: #fff;
+  animation: fill 2s linear infinite alternate;
+}
+
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%, -95%);
+  border: 2px solid #9356DC;
+  border-bottom: none;
+  background: #fff;
+  width: 15px;
+  height: 35px;
+  animation: fillNeck 2s linear infinite alternate;
+}
+
+@keyframes fill {
+  0% {
+    box-shadow: 0 0 inset;
+  }
+  50%, 100% {
+    box-shadow: 0 -98px inset;
+  }
+}
+@keyframes fillNeck {
+  0%, 50% {
+    box-shadow: 0 0 inset;
+  }
+  100% {
+    box-shadow: 0 -20px inset;
+  }
+}
+@keyframes disappear {
+  99% {
+    opacity: 0;
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
 body {
   margin: auto;
   box-sizing: border-box;
   font-family: "roboto";
-  width: 100%;
+  position: relative;
 }
 
 .centre {
@@ -458,14 +524,15 @@ h1 {
   color: transparent;
   -webkit-text-fill-color: transparent;
   font-size: 28px;
-  /*margin-left:-100%;*/
   right: 0px;
   position: absolute;
-  /*align-self: center;*/
   transform: scale(0);
 }
 .restaurant--card__like:hover .restaurant--card__like--activated {
   animation: liked 0.6s both ease;
+}
+.restaurant--card__like:hover .restaurant--card__like {
+  transform: scale(0);
 }
 .restaurant--card:hover {
   box-shadow: 10px 10px 15px #aaaaaa;
