--- a/sass/Utils/keyframes.scss
+++ b/sass/Utils/keyframes.scss
@@ -4,16 +4,8 @@
     0% {
         transform: scale(0);
     }
-    90%  {
-        transform:scale(1) translateX(3%);
-    }
-
-    95% {
-        transform:translateX(-3%)
-    }
-
-    100% {
-        transform:translatex(0);
+    100%  {
+        transform:scale(1);
     }
 }
 
