--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-right: 22%;
+  height: inherit;
+}
+
+header a {
+  position: absolute;
+  left: 30px;
+  bottom: 15px;
 }
 
 .arrow-left {
@@ -12,7 +18,6 @@ nav {
 
 .menu {
   background-color: #f6f6f6;
-  /*display:flex;*/
   border-radius: 30px 30px 0 0;
   margin-top: -50px;
   position: relative;
@@ -53,10 +58,11 @@ nav {
   background-color: white;
   border-radius: 20px;
   padding: 10px 0 10px 10px;
-  width: 95%;
+  width: 100%;
   height: 60px;
   margin: 10px 0 0px 0;
   display: flex;
+  overflow: hidden;
   justify-content: space-between;
   align-items: flex-end;
 }
@@ -84,20 +90,18 @@ nav {
 .card--price {
   font-weight: 600;
   margin-bottom: 5px;
-  margin-right: -80px;
   padding-right: 40px;
-  transform: translateX(0);
-  transition: transform 0.7s ease;
+  transition-duration: 0.5s;
+  transform-origin: right;
 }
 .card:hover > .checked-background {
-  /*animation: checked-background-animation 0.5s forwards ease;*/
-  transform: scaleX(1);
+  margin-right: 0px;
 }
 .card:hover .checked {
   animation: checked-animation 0.6s 0.1s both ease;
 }
 .card:hover .card--price {
-  transform: translateX(-50px);
+  margin-right: 0px;
 }
 
 .checked {
@@ -115,10 +119,8 @@ nav {
   height: 80px;
   width: 60px;
   margin-bottom: -10px;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 0.5s ease;
-  clip: inherit;
+  margin-right: -60px;
+  transition-duration: 0.5s;
 }
 
 .greenline {
@@ -304,10 +306,6 @@ body {
   position: relative;
 }
 
-.centre {
-  /*max-width:1440px;*/
-}
-
 ul {
   list-style-type: none;
 }
@@ -329,9 +327,6 @@ header {
   top: 0;
   left: 0;
   z-index: 3;
-}
-header img {
-  margin: 18px 0 10px 0;
 }
 
 h1 {
@@ -510,9 +505,6 @@ h1 {
   font-weight: 100;
   align-self: center;
   z-index: 0;
-}
-.restaurant--card__like--desactivated {
-  position: absolute;
 }
 .restaurant--card__like--activated {
   background-image: linear-gradient(to top, #ff79da, #9356DC);
