--- a/sass/Pages/Menu.scss
+++ b/sass/Pages/Menu.scss
@@ -1,196 +1,196 @@
 
 
 nav {
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-right:22%;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  height: inherit;
 }
 
+header a {
+position:absolute;
+left:30px;
+bottom:15px;  
+}
 .arrow-left {
-    font-size:26px;
-    color:$darkcolor;
-
+  font-size:26px;
+  color:$darkcolor;
 }
 
 .menu {
-    background-color: $background;
-    /*display:flex;*/
-    border-radius:30px 30px 0 0;
-    margin-top: -50px;
-    position:relative;
-    padding:20px;
-    width:inherit;
-    z-index:2;
-        & h1 {
-            font-family:shrikhand;
-            font-weight:200;
-        }
-    &--image {
-     width:100%;
-     height:330px;
-     z-index: 1;
-     object-fit: cover;
-     overflow: hidden;
-    }
+  background-color: $background;
+  border-radius:30px 30px 0 0;
+  margin-top: -50px;
+  position:relative;
+  padding:20px;
+  width:inherit;
+  z-index:2;
+      & h1 {
+          font-family:shrikhand;
+          font-weight:200;
+      }
+  &--image {
+   width:100%;
+   height:330px;
+   z-index: 1;
+   object-fit: cover;
+   overflow: hidden;
+  }
 }
 
 .restaurantname {
-    display:flex;
-    justify-content: space-between;
-    align-items:center ;
-    margin: 15px 0 20px 10px;
-    font-size: 56px;
-    position:relative;
+  display:flex;
+  justify-content: space-between;
+  align-items:center ;
+  margin: 15px 0 20px 10px;
+  font-size: 56px;
+  position:relative;
 }
 
 .course {
-        &--title {
-            color: $darkcolor;
-            margin-bottom:4px;
-            margin-top:40px;
-            margin-left:5px;
-            font-size:20px;
-        }
-    }
+      &--title {
+          color: $darkcolor;
+          margin-bottom:4px;
+          margin-top:40px;
+          margin-left:5px;
+          font-size:20px;
+      }
+  }
 .card {
-    background-color:white;
-    border-radius: 20px;
-    padding:10px 0 10px 10px;
-    width:95%;
-    height:60px;
-    margin:10px 0 0px 0;
-    display:flex;
-    justify-content: space-between;
-    align-items: flex-end;
-         &--text {
-            flex-direction: column;
-            flex:1;
-            white-space: nowrap;
-            overflow:hidden;
-            text-overflow: ellipsis;
-        }
-        &--title {
-            font-weight:600;
-            font-size:20px;
-            margin:4px;
-            white-space: nowrap;
-            overflow:hidden;
-            text-overflow: ellipsis;
-        }
-        &--details {
-            margin:4px;
-            white-space: nowrap;
-            overflow:hidden;
-            text-overflow: ellipsis;
-        }
-        &--price {
-           font-weight: 600;
-           margin-bottom: 5px;
-           margin-right:-80px;
-           padding-right:40px;
-           transform: translateX(0);
-           transition:transform 0.7s ease;
-        }
+  background-color:white;
+  border-radius: 20px;
+  padding:10px 0 10px 10px;
+  width:100%;
+  height:60px;
+  margin:10px 0 0px 0;
+  display:flex;
+  overflow: hidden;
+  justify-content: space-between;
+  align-items: flex-end;
+       &--text {
+          flex-direction: column;
+          flex:1;
+          white-space: nowrap;
+          overflow:hidden;
+          text-overflow: ellipsis;
+      }
+      &--title {
+          font-weight:600;
+          font-size:20px;
+          margin:4px;
+          white-space: nowrap;
+          overflow:hidden;
+          text-overflow: ellipsis;
+      }
+      &--details {
+          margin:4px;
+          white-space: nowrap;
+          overflow:hidden;
+          text-overflow: ellipsis;
+      }
+      &--price {
+         font-weight: 600;
+         margin-bottom: 5px;
+         padding-right:40px;
+         transition-duration: 0.5s;
+         transform-origin: right;
+      }
 
-        &:hover > .checked-background {
-            /*animation: checked-background-animation 0.5s forwards ease;*/
-            transform:scaleX(1);
-        }
-        &:hover  .checked {
-            animation: checked-animation 0.6s  0.1s both ease;
-        }
-        &:hover .card--price {
-            transform:translateX(-50px);
-        }
-    }
+      &:hover > .checked-background {
+          margin-right:0px;
+      }
+      &:hover  .checked {
+          animation: checked-animation 0.6s  0.1s both ease;
+      }
+      &:hover .card--price {
+        margin-right:0px;
+      }
+  }
 
 .checked {
-    color:white;
-    font-size:28px;
-    display:flex;
-    transform:scale(1);
+  color:white;
+  font-size:28px;
+  display:flex;
+  transform:scale(1);
 
-    &-background {
-        background-color: $tertiary;
-        border-radius: 0 20px 20px 0;
-        display:flex;
-        align-items: center;
-        justify-content: center;     
-        height:80px;
-        width:60px;
-        margin-bottom:-10px;
-        transform-origin: right;
-        transform:scaleX(0);
-        transition: transform 0.5s ease;
-        clip: inherit;
-    }
+  &-background {
+      background-color: $tertiary;
+      border-radius: 0 20px 20px 0;
+      display:flex;
+      align-items: center;
+      justify-content: center;     
+      height:80px;
+      width:60px;
+      margin-bottom:-10px;
+      margin-right: -60px;
+      transition-duration: 0.5s;
+  }
 }
 
 
 .greenline {
-    height:4px;
-    width:50px;
-    background-color: $tertiary;
-    transform: translateX(4000px);
-    animation: greenline-entrance 0.6s 1.2s  both;
-    margin-bottom:20px;
-    margin-left:5px;
+  height:4px;
+  width:50px;
+  background-color: $tertiary;
+  transform: translateX(4000px);
+  animation: greenline-entrance 0.6s 1.2s  both;
+  margin-bottom:20px;
+  margin-left:5px;
 }
 
 
 .commandbutton {
-    width:60%;
-    margin:50px 20%;
+  width:60%;
+  margin:50px 20%;
 }
 
 
-  .card1 {
-    @include cardapparition;
-    animation-delay:0.2s
-  }
+.card1 {
+  @include cardapparition;
+  animation-delay:0.2s
+}
 
-  .card2 {
-    @include cardapparition;
-    animation-delay:0.4s
-  }
+.card2 {
+  @include cardapparition;
+  animation-delay:0.4s
+}
 
-  .card3 {
-    @include cardapparition;
-    animation-delay:0.6s
-  }
+.card3 {
+  @include cardapparition;
+  animation-delay:0.6s
+}
 
-  .card4 {
-    @include cardapparition;
-    animation-delay:0.8s
-  }
+.card4 {
+  @include cardapparition;
+  animation-delay:0.8s
+}
 
-  .card5 {
-    @include cardapparition;
-    animation-delay:1s
-  }
+.card5 {
+  @include cardapparition;
+  animation-delay:1s
+}
 
-  .card6 {
-    @include cardapparition;
-    animation-delay:1.2s
-  }
+.card6 {
+  @include cardapparition;
+  animation-delay:1.2s
+}
 
-  .card7 {
-    @include cardapparition;
-    animation-delay:1.4s
-  }
+.card7 {
+  @include cardapparition;
+  animation-delay:1.4s
+}
 
-  .card8 {
-    @include cardapparition;
-    animation-delay:1.6s
-  }
+.card8 {
+  @include cardapparition;
+  animation-delay:1.6s
+}
 
-  .card9 {
-    @include cardapparition;
-    animation-delay:1.8s
-  }
+.card9 {
+  @include cardapparition;
+  animation-delay:1.8s
+}
 
-  .card10 {
-    @include cardapparition;
-    animation-delay:2s
-  }
+.card10 {
+  @include cardapparition;
+  animation-delay:2s
+}
